# github-oidc

./: .md  Cargo.toml  License  README.md
.github/workflows/: rust.yml  tests.yml
github/workflows/: tests.yml
script/: publish.sh
src/: errors.rs  lib.rs
