[package]
name = "git-oidc"
version = "0.1.1"
edition = "2021"

description = "A library for validating GitHub OIDC tokens"
authors = ["Seif Mamdouh"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/the-cafe/git-oidc"
keywords = ["github", "oidc", "authentication"]
categories = ["authentication", "web-programming"]

[dependencies]
color-eyre = "0.6.3"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mockito = "1.5.0"
reqwest = {version = "0.12.7", features = ["json"]}
serde = "1.0.209"
serde_json = "1.0.127"
tokio = {version = "1.39.3", features = ["full"]}
tracing = "0.1.40"
