[package]
name = "github-oidc"
version = "0.3.0"
edition = "2021"

description = "Rust crate for validating GitHub OIDC tokens"
authors = ["Seif Mamdouh"]
license = "Apache-2.0"
repository = "https://github.com/the-cafe/github-oidc"
keywords = ["github", "oidc", "authentication"]
categories = ["authentication", "web-programming"]

[dependencies]
anyhow = "1.0.86"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mockito = "1.5.0"
reqwest = {version = "0.12.7", features = ["json"]}
serde = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = {version = "1.39.3", features = ["full"]}
tracing = "0.1.40"
